# langgraph-course

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
notebooks/: first_steps.ipynb
notebooks/basic/: beginners_steps.ipynb  conditional_edges.ipynb  drafter.ipynb  guess_number_game.ipynb  looping_graph.ipynb  sequentials_nodes.ipynb
notebooks/langchain/: basic.ipynb  gemini.ipynb
notebooks/with_llms/: first_steps.ipynb  re_act_agents.ipynb
projects/examples/: mini_swarm.py  real_state_swarm.py
